<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    tools:context="com.hangman.sinapse.hangman.TelaTema">

    <LinearLayout
        android:id="@+id/telaCima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="right"
            android:text="@string/labelEscolha"
            android:textSize="25sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/telaBaixo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/telaCima"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgForca"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2"
                app:srcCompat="@drawable/forca101" />

            <RadioGroup
                android:id="@+id/rdGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="3">

                <RadioButton
                    android:id="@+id/rdNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/normal"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/rdDificil"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/dif_cil"
                    android:textColor="@android:color/black" />

                <RadioButton
                    android:id="@+id/rdSurvive"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="onRadioButtonClicked"
                    android:text="@string/survive"
                    android:textColor="@android:color/black" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/telaTeclado"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="178dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ListView
                    android:id="@+id/listTema"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1">

                </ListView>

                <Button
                    android:id="@+id/btJogar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:onClick="jogar"
                    android:text="@string/jogar"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
